final checks and corrected extra space between sections

--- a/assets/style.css
+++ b/assets/style.css
@@ -129,11 +129,9 @@ ul {
   height: 100%;
 }
 
-/* CREDIT Chris Coyier of CSS Tricks and Chris Ferdinandi from Codepen */
-
 .offset-anchor {
   position: relative;
-  top: -120px;
+  top: -100px;
 }
 
 /* Nav */
@@ -542,8 +540,8 @@ footer p {
   .b480 {
     display: none;
   }
-  /* ./ Credit */
 }
+/* ./ Credit */
 
 @media screen and (max-width: 400px) {
   .circle {
@@ -561,52 +559,5 @@ footer p {
   .border {
     padding-left: 10px;
     padding-right: 10px;
-  }
-}
-@media only screen 
-    and (min-device-width: 414px) 
-    and (max-device-height: 736px) 
-    and (-webkit-device-pixel-ratio: 3) {
-  .offset-anchor {
-    display: block;
-    position: relative;
-    top: -220px;
-    visibility: hidden;
-  }
-}
-
-@media only screen 
-    and (min-device-width: 375px) 
-    and (max-device-height: 667px)  
-    and (-webkit-device-pixel-ratio: 2){
-  .offset-anchor {
-    display: block;
-    position: relative;
-    top: -220px;
-    visibility: hidden;
-  }
-}
-
-@media only screen 
-    and (device-width : 414px) 
-    and (device-height : 896px) 
-    and (-webkit-device-pixel-ratio : 2){
-  .offset-anchor {
-    display: block;
-    position: relative;
-    top: -220px;
-    visibility: hidden;
-  }
-}
-
-    @media only screen 
-    and (device-width : 375px) 
-    and (device-height : 812px) 
-    and (-webkit-device-pixel-ratio : 3){
-  .offset-anchor {
-    display: block;
-    position: relative;
-    top: -220px;
-    visibility: hidden;
   }
 }
